# geppetto

./: .gitignore  AGENTS.md  AGENTS_UPDATE.md  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  LICENSE  LICENSE-APACHE  MEMORY.md  README.md  geppetto.toml  package.json  tsconfig.json  wrangler.toml
.github/workflows/: ci.yml  upstream-check.yml
docs/: 00-business-validation.md  01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-test-spec.md  06-implementation-log.md  07-review-report.md  08-evolution.md  09-release-notes.md  10-e7-01-external-alignment.md  11-e7-02-create-solana-dapp-action-plan.md  12-e7-03-create-solana-dapp-discussion-draft.md  13-current-status-summary.md  13-e7-04-send-window-checklist.md  MIGRATION_GUIDE.md  VERIFICATION_REPORT.md
docs/platform/: 01-prd.md  02-architecture.md  03-technical-spec.md  07-review-report.md  08-evolution.md  09-competition-positioning.md  10-hackathon-quickstart.md  11-demo-script.md  12-website-copy.md  13-pitch-deck.md  (+1 more)
examples/escrow/: Cargo.toml
examples/escrow/src/: error.rs  lib.rs  processor.rs  state.rs
examples/escrow/src/instructions/: close.rs  create.rs  exchange.rs  mod.rs
examples/escrow/tests/: client_alignment.ts  generate_fixtures.rs  integration.rs  svm.rs
examples/escrow/tests/fixtures/: escrow_layout.json
lib/: agent-entry-check.js  agent-entry-check.ts  audit.js  audit.ts  e7-delivery-packet.js  e7-delivery-packet.ts  e7-readiness-check.js  e7-readiness-check.ts  feature-matrix-check.js  feature-matrix-check.ts  init.js  init.ts  knowledge-check.js  knowledge-check.ts  knowledge-manifest.js  knowledge-manifest.ts  new-manifest.js  new-manifest.ts  new.js  new.ts  release-check.js  release-check.ts  site-check.ts  templates.js  templates.ts  test.js  test.ts  upstream-diff-check.js  upstream-diff-check.ts  upstream-impact-map.js  upstream-impact-map.ts  upstream-manifest.js  upstream-manifest.ts  upstream-pr-template.ts  upstream-version-check.ts
notes/: encore-cli-research.md
site/: 404.html  _redirects  index.html  llms.txt
src/: anti_patterns.rs  client.rs  dispatch.rs  error.rs  guard.rs  idioms.rs  lib.rs  schema.rs  testing.rs
(+98 files in other folders)
