[package]
name = "geppetto"
version = "0.1.0"
edition = "2024"
description = "Pinocchio Agent Harness — knowledge + constraints for AI coding agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DaviRain-Su/geppetto"
keywords = ["solana", "pinocchio", "agent", "harness"]
categories = ["development-tools"]

[dependencies]
pinocchio = { version = "0.11", features = ["cpi"] }

pinocchio-system = { version = "0.6", optional = true }
pinocchio-token = { version = "0.6", optional = true }
pinocchio-token-2022 = { version = "0.3", optional = true }
pinocchio-associated-token-account = { version = "0.4", optional = true }
pinocchio-memo = { version = "0.4", optional = true }
pinocchio-log = { version = "0.5", optional = true }
pinocchio-pubkey = { version = "0.3", optional = true }

[dev-dependencies]
solana-address = { version = "2.0", features = ["curve25519"] }

[features]
default = []
system = ["dep:pinocchio-system"]
token = ["dep:pinocchio-token"]
token-2022 = ["dep:pinocchio-token-2022"]
ata = ["dep:pinocchio-associated-token-account"]
memo = ["dep:pinocchio-memo"]
log = ["dep:pinocchio-log"]
pubkey = ["dep:pinocchio-pubkey"]
token-all = ["token", "token-2022", "ata"]
full = ["system", "token-all", "memo", "log", "pubkey"]
test-utils = []
