[package]
name = "geppetto-escrow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
geppetto = { path = "../..", features = ["system", "token"] }

[dev-dependencies]
pinocchio = "0.11"
solana-address = { version = "2", features = ["curve25519"] }

[lib]
crate-type = ["cdylib", "lib"]
