[package]
name = "geppetto-escrow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
geppetto = { path = "../..", features = ["system", "token"] }

[dev-dependencies]
pinocchio = "0.11"
solana-address = { version = "2", features = ["curve25519"] }
mollusk-svm = "0.12"
solana-account = "3"
solana-instruction = "3"
solana-pubkey = "4"
solana-program-error = "3"
hex = "0.4"

[lib]
crate-type = ["cdylib", "lib"]
